--- a/IronERP.Web/IronERP.Web.csproj
+++ b/IronERP.Web/IronERP.Web.csproj
@@ -8,6 +8,18 @@
 
   <ItemGroup>
     <ProjectReference Include="..\IronERP.CommandLine\IronERP.CommandLine.csproj" />
+    <ProjectReference Include="..\IronERP.Core\IronERP.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.29.0" />
+    <PackageReference Include="Serilog" Version="4.0.2" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
