--- a/IronERP.Web/appsettings.Development.json
+++ b/IronERP.Web/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MongoDB": {
+    "Host": "mongodb://localhost:27017",
+    "Database": "IronERP"
   }
 }
