--- a/IronERP.Web/appsettings.json
+++ b/IronERP.Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDB": {
+    "Host": "mongodb://localhost:27017",
+    "Database": "IronERP"
+  }
 }
