--- a/Frontend/ironerp-frontend/package.json
+++ b/Frontend/ironerp-frontend/package.json
@@ -12,10 +12,12 @@
     "@headlessui/react": "^2.1.9",
     "@heroicons/react": "^2.1.5",
     "next": "14.2.14",
+    "preline": "^2.5.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
