--- a/IronERP.CommandLine/IronERP.CommandLine.csproj
+++ b/IronERP.CommandLine/IronERP.CommandLine.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Spectre.Console.Cli" Version="0.49.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IronERP.Core\IronERP.Core.csproj" />
+  </ItemGroup>
+
 </Project>
