--- a/IronERP.Web/appsettings.json
+++ b/IronERP.Web/appsettings.json
@@ -9,5 +9,15 @@
   "MongoDB": {
     "Host": "mongodb://localhost:27017",
     "Database": "IronERP"
+  },
+  "Search": {
+    "Backend": {
+      "MeilisearchHost": "http://localhost:7700",
+      "SearchKey": "",
+      "WriteKey": ""
+    },
+    "Indexing": {
+      "Strategy": "full"
+    }
   }
 }
