--- a/IronERP.Core/IronERP.Core.csproj
+++ b/IronERP.Core/IronERP.Core.csproj
@@ -8,8 +8,15 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MeiliSearch" Version="0.15.3" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
       <PackageReference Include="MongoDB.Driver" Version="2.29.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="HostedServices\" />
     </ItemGroup>
 
 </Project>
