--- a/Frontend/ironerp-frontend/package.json
+++ b/Frontend/ironerp-frontend/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blueprintjs/core": "^5.13.1",
+    "@blueprintjs/icons": "^5.13.0",
+    "@blueprintjs/table": "^5.2.2",
     "@headlessui/react": "^2.1.9",
     "@heroicons/react": "^2.1.5",
     "next": "14.2.14",
     "preline": "^2.5.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ts-pattern": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
