--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -25,6 +25,6 @@ jobs:
         with:
           dotnet-version: 8.x.x
       - name: Build
-        run: dotnet build @{SOLUTION} --configuration ${BUILD_CONFIG} --no-restore
+        run: dotnet build ${SOLUTION} --configuration ${BUILD_CONFIG} --no-restore
       - name: Tests
         run: dotnet test --configuration ${BUILD_CONF
