--- a/IronERP.Core/IronERP.Core.csproj
+++ b/IronERP.Core/IronERP.Core.csproj
@@ -4,10 +4,24 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>Core</RootNamespace>
+
+        <GenerateDocumentationFile>True</GenerateDocumentationFile>
+        <NoWarn>$(NoWarn);CS1591</NoWarn>
+
+        <Authors>Jakub Sycha</Authors>
+        <Description>The IronERP Core</Description>
+        <PackageProjectUrl>https://github.com/IronERP/IronERP</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/IronERP/IronERP</RepositoryUrl>
+        <PackageTags>erp</PackageTags>
+        <PackageLicenseExpression>GPL-3.0+</PackageLicenseExpression>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="DotNet.ReproducibleBuilds" Version="1.2.25">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="MeiliSearch" Version="0.15.3" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
@@ -19,4 +33,7 @@
       <Folder Include="HostedServices\" />
     </ItemGroup>
 
+    <ItemGroup>
+        <None Include="../README.md" Pack="true" PackagePath="" />
+    </ItemGroup>
 </Project>
