--- a/IronERP.Web/IronERP.Web.csproj
+++ b/IronERP.Web/IronERP.Web.csproj
@@ -4,6 +4,17 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);CS1591</NoWarn>
+
+    <Authors>Jakub Sycha</Authors>
+    <Description>IronERP Web</Description>
+    <PackageProjectUrl>https://github.com/IronERP/IronERP</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/IronERP/IronERP</RepositoryUrl>
+    <PackageTags>erp</PackageTags>
+    <PackageLicenseExpression>GPL-3.0+</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNet.ReproducibleBuilds" Version="1.2.25">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="MongoDB.Driver" Version="2.29.0" />
     <PackageReference Include="Newtonsoft.Json.Schema" Version="4.0.1" />
     <PackageReference Include="Serilog" Version="4.0.2" />
@@ -24,4 +39,7 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="../README.md" Pack="true" PackagePath="" />
+  </ItemGroup>
 </Project>
