--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -27,7 +27,9 @@ jobs:
         uses: actions/setup-dotnet@v4
       
       - name: Pack
-        run: dotnet pack --configuration Release --output ${{ env.NuGetDirectory }}
+        run: | # We only want to build Web and Core for NuGet
+          dotnet pack IronERP.Core --configuration Release --output ${{ env.NuGetDirectory }} -p:VersionPrefix=${{ github.ref_name }}
+          dotnet pack IronERP.Web --configuration Release --output ${{ env.NuGetDirectory }} -p:VersionPrefix=${{ github.ref_name }}
       
       - name: Publish
         uses: actions/upload-artifact@v4
@@ -36,25 +38,6 @@ jobs:
           if-no-files-found: error
           retention-days: 7
           path: ${{ env.NuGetDirectory }}/*.nupkg
-  
-  validate_nuget:
-    runs-on: ubuntu-latest
-    needs: [ create_nuget ]
-    steps:
-      - name: Setup DotNet
-        uses: actions/setup-dotnet@v4
-      
-      - name: Download Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: nuget
-          path: ${{ env.NuGetDirectory }}
-      
-      - name: Install NuGet Validator
-        run: dotnet tool update Meziantou.Framework.NuGetPackageValidation.Tool --global
-      
-      - name: Validate package
-        run: meziantou.validate-nuget-package (Get-ChildItem "${{ env.NuGetDirectory }}/*.nupkg")
   
   run_test:
     runs-on: ubuntu-latest
@@ -71,7 +54,7 @@ jobs:
   push:
     if: github.event_name == 'release'
     runs-on: ubuntu-latest
-    needs: [ validate_nuget, run_test ]
+    needs: [ create_nuget, run_test ]
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
