--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -70,5 +70,5 @@ jobs:
           dotnet nuget add source --username IronERP --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/IronERP/index.json"
           
           foreach($file in (Get-ChildItem "${{ env.NuGetDirectory }}" -Recurse -Include *.nupkg)) {
-            dotnet nuget push $file ---api-key "${{ secrets.GITHUB_TOKEN }}" --source github --skip-duplicate
+            dotnet nuget push $file --api-key "${{ secrets.GITHUB_TOKEN }}" --source github --skip-duplicate
           }
