--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -55,6 +55,8 @@ jobs:
     if: github.event_name == 'release'
     runs-on: ubuntu-latest
     needs: [ create_nuget, run_test ]
+    permissions: 
+      packages: write
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
