--- a/Frontend/ironerp-frontend/package.json
+++ b/Frontend/ironerp-frontend/package.json
@@ -14,6 +14,7 @@
     "@blueprintjs/table": "^5.2.2",
     "@headlessui/react": "^2.1.9",
     "@heroicons/react": "^2.1.5",
+    "lodash": "^4.17.21",
     "next": "14.2.14",
     "preline": "^2.5.0",
     "react": "^18",
