--- a/Frontend/ironerp-frontend/package.json
+++ b/Frontend/ironerp-frontend/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.4.20",
     "lodash": "^4.17.21",
     "next": "14.2.14",
+    "next-themes": "^0.4.3",
     "postcss-nesting": "^13.0.1",
     "preline": "^2.5.0",
     "react": "^18",
