--- a/Frontend/ironerp-frontend/package.json
+++ b/Frontend/ironerp-frontend/package.json
@@ -16,6 +16,7 @@
     "@blueprintjs/table": "^5.2.2",
     "@headlessui/react": "^2.1.9",
     "@heroicons/react": "^2.1.5",
+    "@ironerp/client": "^0.1.0",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "autoprefixer": "^10.4.20",
     "lodash": "^4.17.21",
@@ -38,6 +39,7 @@
     "@storybook/react": "^8.4.2",
     "@storybook/test": "^8.4.2",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -48,5 +50,6 @@
     "storybook": "^8.4.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@3.8.6"
 }
